[tool.poetry]
name = "mini-expense-tracker"
version = "0.1.0"
description = ""
authors = ["Peter Laudel <38426989+PeterLaudel@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
